--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxtjs/firebase": "^8.2.2",
+    "@tinymce/tinymce-vue": "^3.2.8",
     "core-js": "^3.19.3",
     "firebase": "^9.6.10",
     "isomorphic-fetch": "^3.0.0",
@@ -19,7 +20,9 @@
     "vue-cookies": "^1.7.4",
     "vue-cookies-reactive": "^2.1.1",
     "vue-server-renderer": "^2.6.14",
+    "vue-simple-alert": "^1.1.1",
     "vue-template-compiler": "^2.6.14",
+    "vue2-tinymce-editor": "^0.0.1",
     "webpack": "^4.46.0"
   }
 }
