--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "vue-cookies-reactive": "^2.1.1",
     "vue-server-renderer": "^2.6.14",
     "vue-simple-alert": "^1.1.1",
+    "vue-simple-alert-fixed": "^1.0.1",
     "vue-template-compiler": "^2.6.14",
     "vue2-tinymce-editor": "^0.0.1",
     "webpack": "^4.46.0"
