--- a/package.json
+++ b/package.json
@@ -25,5 +25,8 @@
     "vue-template-compiler": "^2.6.14",
     "vue2-tinymce-editor": "^0.0.1",
     "webpack": "^4.46.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/google-analytics": "^2.4.0"
   }
 }
